--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             <tr><td>الرياضيات</td><td>40</td><td>100</td><td>78</td><td>80</td><td>84</td></tr>
             <tr><td>العلوم والتربية الصحية</td><td>40</td><td>100</td><td>80</td><td>94</td><td>87</td></tr>
             <tr><td>الفنون الجمالية</td><td>40</td><td>100</td><td>100</td><td>100</td><td>100</td></tr>
-            <tr><td>اللغة الإنكليزية</td><td>40</td><td>100</td><td>65</td><td>62</td><td>64</td></tr>
+            <tr><td>اللغة الإنكليزية</td><td>40</td><td>100</td><td>65</td><td>52</td><td>59
+    </td></tr>
             <tr><td>مهارات شفوية</td><td>50</td><td>100</td><td>80</td><td>85</td><td>83</td></tr>
             <tr><td>مهارات كتابية</td><td>50</td><td>100</td><td>80</td><td>80</td><td>80</td></tr>
             <tr class="total-row">
@@ -75,7 +76,7 @@
                 <td>1100</td>
                 <td>-</td>
                 <td>-</td>
-                <td>959</td>
+                <td>954</td>
             </tr>
         </tbody>
     </table>
