--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الجلاء المدرسي - محمد زاهر البواب</title>
+    <title>الجلاء المدرسي - إيمان زاهر البواب</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f4f4f4; padding: 20px; }
         .report-card { max-width: 900px; margin: auto; background: white; padding: 30px; border: 1px solid #ddd; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
@@ -35,11 +35,11 @@
     <div class="info-grid">
         <div class="info-item">المديرية: <span>حمص</span></div>
         <div class="info-item">المجمع: <span>حمص الجنوبي</span></div>
-        <div class="info-item">المدرسة: <span>عبد الرزاق بيرقدار</span></div>
-        <div class="info-item">اسم الطالب: <span>محمد زاهر البواب</span></div>
+        <div class="info-item">المدرسة: <span>النهضة العربية</span></div>
+        <div class="info-item">اسم الطالب: <span>إيمان زاهر البواب</span></div>
         <div class="info-item">اسم الأم: <span>دعاء</span></div>
-        <div class="info-item">المواليد: <span>13-05-2014</span></div>
-        <div class="info-item">الصف: <span>السادس</span></div>
+        <div class="info-item">المواليد: <span>19-1-2013</span></div>
+        <div class="info-item">الصف: <span>الثامن</span></div>
         <div class="info-item">الرقم الدراسي: <span>0</span></div>
     </div>
 
@@ -58,25 +58,24 @@
             </tr>
         </thead>
         <tbody>
-            <tr><td>أنشطة</td><td>40</td><td>100</td><td>100</td><td>100</td><td>100</td></tr>
-            <tr><td>اجتماعيات</td><td>40</td><td>100</td><td>82</td><td>79</td><td>81</td></tr>
-            <tr><td>التربية الدينية</td><td>40</td><td>100</td><td>77</td><td>83</td><td>80</td></tr>
-            <tr><td>التربية الرياضية</td><td>40</td><td>100</td><td>100</td><td>100</td><td>100</td></tr>
-            <tr><td>التربية الموسيقية</td><td>40</td><td>100</td><td>100</td><td>100</td><td>100</td></tr>
-            <tr><td>الرياضيات</td><td>40</td><td>100</td><td>78</td><td>80</td><td>84</td></tr>
-            <tr><td>العلوم والتربية الصحية</td><td>40</td><td>100</td><td>80</td><td>94</td><td>87</td></tr>
-            <tr><td>الفنون الجمالية</td><td>40</td><td>100</td><td>100</td><td>100</td><td>100</td></tr>
-            <tr><td>اللغة الإنكليزية</td><td>40</td><td>100</td><td>65</td><td>52</td><td>59
-    </td></tr>
-            <tr><td>مهارات شفوية</td><td>50</td><td>100</td><td>80</td><td>85</td><td>83</td></tr>
-            <tr><td>مهارات كتابية</td><td>50</td><td>100</td><td>80</td><td>80</td><td>80</td></tr>
+            <tr><td>تكنولوجيا المعلومات والاتصال</td><td>80</td><td>200</td><td>160</td><td>190</td><td>175</td></tr>
+            <tr><td>اجتماعيات</td><td>240</td><td>600</td><td>510</td><td>579</td><td>545</td></tr>
+            <tr><td>التربية الدينية</td><td>80</td><td>200</td><td>200</td><td>194</td><td>192</td></tr>
+            <tr><td>التربية الرياضية</td><td>80</td><td>200</td><td>200</td><td>170</td><td>185</td></tr>
+            <tr><td>التربية الموسيقية</td><td>80</td><td>200</td><td>200</td><td>200</td><td>200</td></tr>
+            <tr><td>الرياضيات</td><td>240</td><td>600</td><td>478</td><td>580</td><td>530</td></tr>
+            <tr><td>العلوم العامة</td><td>160</td><td>400</td><td>380</td><td>394</td><td>387</td></tr>
+            <tr><td>الفنون الجمالية</td><td>80</td><td>200</td><td>200</td><td>200</td><td>200</td></tr>
+            <tr><td>اللغة الإنكليزية</td><td>160</td><td>400</td><td>365</td><td>362</td><td>364</td></tr>
+            <tr><td>  اللغة الفرنسية</td><td>160</td><td>400</td><td>380</td><td>385</td><td>383</td></tr>
+            <tr><td> اللغة العربية</td><td>240</td><td>600</td><td>550</td><td>570</td><td>560</td></tr>
             <tr class="total-row">
                 <td>المجموع</td>
-                <td>460</td>
-                <td>1100</td>
+                <td>1600</td>
+                <td>4000</td>
                 <td>-</td>
                 <td>-</td>
-                <td>954</td>
+                <td>3721</td>
             </tr>
         </tbody>
     </table>
@@ -85,7 +84,7 @@
         <div>النتيجة النهائية: ....................</div>
         <div class="signature">
             <p>اسم المدير:</p>
-            <p><strong>مروه محمد نزيه السيد</strong></p>
+            <p><strong>ميسون السليم </strong></p>
         </div>
     </div>
 </div>
